fixed header nav wrap

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -98,6 +98,7 @@ body{
 					a{
 						color: $white;
 						-webkit-font-smoothing: antialiased;
+						padding: 10px 10px;
 					}
 					a:hover{
 						color: #dddddd;
@@ -115,7 +116,6 @@ body{
 					}
 
 					li{
-
 						a{
 
 						}
